<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SIMANIS</string>

    <string name="headline_welcome">Enjoy the ease of tracking your sugar intake with two convenient options</string>
    <string name="subheadline_welcome">“manual input for specific details or quick scan for instant results!"</string>
    <string name="headline_login">LOGIN HERE!</string>
    <string name="subheadline_login">Welcome back you’ve been missed!</string>
    <string name="dont_have_an_account">Don\\t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="headline_register">Create Account</string>
    <string name="headline_input_data_user">User Personal Data</string>
    <string name="subheadline_register">"Create an account to start managing your daily sugar intake and unlock all features!"</string>
    <string name="subheadline1_dashboard">"Stay Healthy, Keep Your Sugar Limit Today"</string>
    <string name="headline_dashboard">Hi, User...</string>
    <string name="subheadline_dashboard">"Your Progress Today: 80% of Daily Sugar Limit"</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="usia">Usia</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="berat_badan">Berat badan</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="riwayat_kesehatan">Riwayat Diabetes</string>
    <string name="btn_save_data">Save data</string>
    <string name="btn_input">Input</string>
    <string name="btn_scan">Scan</string>
    <string name="title_activity_dashboardd">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="settings">Settings</string>
    <string name="prompt_jenis_aktivitas">Pilih Jenis Aktivitas</string>
    <string name="prompt_riwayat_diabetes">Riwayat Diabetes</string>
    <string name="prompt_jenis_kelamin">Pilih Jenis Kelamin</string>


    <!-- Article Titles -->
    <string-array name="article_titles" tools:ignore="ExtraTranslation">
        <item>Title 1: Berapa Batas Konsumsi Gula, Garam, dan Lemak (GGL) per Hari?</item>
        <item>Title 2: Understanding Mental Health</item>
        <item>Title 3: Top Tips for Staying Active</item>
    </string-array>

    <!-- Article Descriptions -->
    <string-array name="article_descriptions" tools:ignore="ExtraTranslation">
        <item>This article explores the benefits of maintaining a balanced diet...</item>
        <item>A deep dive into the importance of mental health and wellness...</item>
        <item>Find out how staying active can improve your overall well-being...</item>
    </string-array>

    <!-- Article Images -->
    <string-array name="article_images" tools:ignore="ExtraTranslation">
        <item>@drawable/artikel</item>
        <item>@drawable/artikel</item>
        <item>@drawable/artikel</item>
    </string-array>

    <!-- Article Links -->
    <string-array name="article_links" tools:ignore="ExtraTranslation">
        <item>https://hellosehat.com/nutrisi/fakta-gizi/konsumsi-gula-garam-dan-lemak-per-hari/</item>
        <item>https://hellosehat.com/nutrisi/fakta-gizi/konsumsi-gula-garam-dan-lemak-per-hari/</item>
        <item>https://hellosehat.com/nutrisi/fakta-gizi/konsumsi-gula-garam-dan-lemak-per-hari/</item>
    </string-array>
</resources>
