<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InputUserDataActivity">

    <EditText
        android:id="@+id/input_user_name"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/headline_register"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:text="@string/headline_input_data_user"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/input_berat_badan"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/berat_badan"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <Spinner
        android:id="@+id/spinner_jenis_aktivitas"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:prompt="@string/prompt_jenis_aktivitas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <Spinner
        android:id="@+id/spinner_riwayat_diabetes"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:prompt="@string/prompt_riwayat_diabetes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <Spinner
        android:id="@+id/spinner_jenis_kelamin"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:prompt="@string/prompt_jenis_kelamin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <Button
        android:id="@+id/button2"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:text="@string/btn_save_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <EditText
        android:id="@+id/input_usia"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/usia"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

</androidx.constraintlayout.widget.ConstraintLayout>
