<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

  <TextView
      android:id="@+id/headline_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/headline_register"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.098" />

  <TextView
      android:id="@+id/subheadline_register"
      android:layout_width="324dp"
      android:layout_height="63dp"
      android:text="@string/subheadline_register"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.187" />

  <EditText
      android:id="@+id/input_email"
      android:layout_width="312dp"
      android:layout_height="51dp"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.515"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.308" />

  <EditText
      android:id="@+id/input_pwd"
      android:layout_width="312dp"
      android:layout_height="51dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:minHeight="48dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.422" />

  <EditText
      android:id="@+id/input_confirm_pwd"
      android:layout_width="312dp"
      android:layout_height="51dp"
      android:ems="10"
      android:hint="@string/confirm_pwd"
      android:inputType="textPassword"
      android:minHeight="48dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.533" />

  <Button
      android:id="@+id/button_register"
      android:layout_width="310dp"
      android:layout_height="48dp"
      android:text="@string/register"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.67" />

  <TextView
      android:id="@+id/text_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.688"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.778" />

  <TextView
      android:id="@+id/dont_have_acc"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/already_have_an_account"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.361"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.778" />

</androidx.constraintlayout.widget.ConstraintLayout>