<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.simanisapp.ui.input.InputFragment"
        android:label="@string/btn_input"
        tools:layout="@layout/fragment_input" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.simanisapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.simanisapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_artikel"
        android:name="com.example.simanisapp.ui.artikel.ArtikelFragment"
        android:label="artikel"
        tools:layout="@layout/fragment_artikel" />
</navigation>